--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_core: ^1.7.0
   flutter:
     sdk: flutter
+  flutter_svg: ^0.22.0
   font_awesome_flutter: ^9.1.0
   google_sign_in: ^5.1.1
   http: ^0.13.3
