--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.1.2
   firebase_core: ^1.7.0
+  firebase_storage: ^10.0.4
   flutter:
     sdk: flutter
   flutter_svg: ^0.22.0
   font_awesome_flutter: ^9.1.0
   google_sign_in: ^5.1.1
   http: ^0.13.3
+  image_picker: ^0.8.4+2
   provider: ^6.0.1
 
 dev_dependencies:
