--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   google_sign_in: ^5.1.1
   http: ^0.13.3
   image_picker: ^0.8.4+2
+  intl: ^0.17.0
+  open_file: ^3.2.1
+  path_provider: ^2.0.5
   pdf: ^3.6.0
   provider: ^6.0.1
 
