--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_storage: ^10.0.4
   flutter:
     sdk: flutter
+  flutter_phoenix: ^1.0.0
   flutter_svg: ^0.22.0
   font_awesome_flutter: ^9.1.0
   google_sign_in: ^5.1.1
