--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_storage: ^10.0.4
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
   flutter_phoenix: ^1.0.0
   flutter_svg: ^0.22.0
   font_awesome_flutter: ^9.1.0
@@ -31,6 +32,11 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  image_path: 'assets/icons/groceries.svg'
+  android: true
+  ios: true
 
 flutter:
 
